# normal-map-test

./: CMakeLists.txt  LICENSE  Makefile  README.md  main.c  test.gltf  test_hi.gltf  test_lo.gltf
